# minecho

./: CMakeLists.txt  LICENCE  README.md  main.c
minlibc/: stdio.c  stdio.h  string.c  string.h
